# skriv

./: .gitignore  .mise.toml  CLAUDE.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/workflows/: ci.yml
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: commands.rs  lib.rs  scope.rs  validated_path.rs  watcher.rs
docs/plans/: 2026-03-18-skriv-design.md  2026-03-18-skriv-implementation.md  2026-03-19-code-block-fence-syntax-toggling-design.md  2026-03-19-cursor-aware-syntax-toggling-design.md  2026-03-19-file-watcher-debounce-design.md  2026-03-19-frontend-tests-design.md  2026-03-19-heading-syntax-toggling-design.md  2026-03-19-list-marker-syntax-toggling-design.md  2026-03-20-source-mode-toggle-design.md  2026-03-22-mermaid-diagrams-design.md  2026-03-23-e2e-testing-design.md  2026-03-23-link-syntax-toggling-design.md  2026-03-23-mermaid-expand-overlay-design.md  2026-03-25-document-search-design.md  2026-03-27-multi-window-single-instance-design.md  2026-03-27-toc-sidebar-design.md
docs/project_notes/: bugs.md  decisions.md  issues.md  key_facts.md
e2e/: playwright.config.ts
e2e/fixtures/: index.ts  tauri-mock.ts
e2e/tests/: editor.spec.ts  formatting.spec.ts  link-clipboard.spec.ts  mermaid.spec.ts  save.spec.ts  search.spec.ts  smoke.spec.ts  source-mode.spec.ts  toc-sidebar.spec.ts
scripts/: rustc-wrapper.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
ui/: App.tsx  index.html
(+93 files in other folders)
