[package]
name = "skriv"
version = "0.1.0"
description = "A Typora-style WYSIWYG markdown editor"
authors = ["you"]
edition = "2021"

[lib]
name = "skriv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
